# justcallskill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  skill.json
src/justcall_readonly/: __init__.py  audit.py  client.py  ratelimit.py  server.py
tests/: test_client.py
